--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^1.16.0"
   },
   "dependencies": {
+    "petfinder-client": "0.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
